--- a/tls_origination_via_tls_l2_proxy/squid/squid.conf
+++ b/tls_origination_via_tls_l2_proxy/squid/squid.conf
@@ -5,6 +5,7 @@ auth_param basic credentialsttl 2 hours
 acl BASIC_AUTHENTICATION proxy_auth REQUIRED
 http_access allow BASIC_AUTHENTICATION
 
+http_port 3128
 https_port 3129 cert=/etc/squid/proxy.pem
 
 dns_v4_first on
