--- a/tls_origination_via_tls_l2_proxy/Dockerfile-proxy
+++ b/tls_origination_via_tls_l2_proxy/Dockerfile-proxy
@@ -3,4 +3,4 @@
 
 COPY ./envoy.yaml /etc/envoy.yaml
 RUN chmod go+r /etc/envoy.yaml
-CMD ["/usr/local/bin/envoy", "-c /etc/envoy.yaml"]
+CMD ["/usr/local/bin/envoy", "-c /etc/envoy.yaml", "--log-level trace"]
