add sni for proxy tls upstream
Some edge proxies are behind sni routing load balancer like haproxy.

--- a/tls_origination_via_tls_l2_proxy/envoy.yaml
+++ b/tls_origination_via_tls_l2_proxy/envoy.yaml
@@ -84,4 +84,4 @@ static_resources:
         name: envoy.transport_sockets.tls
         typed_config:
           "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
-
+          sni: service-squid
