use dynamic setting value of TcpProxy.tunneling_config.hostname

--- a/tls_origination_via_tls_l2_proxy/docker-compose.yaml
+++ b/tls_origination_via_tls_l2_proxy/docker-compose.yaml
@@ -14,8 +14,9 @@ services:
     build:
       context: squid
       dockerfile: Dockerfile-squid
-    depends_on:
+    links:
     - service-https
+    - service-https:other-https
     hostname: service-squid
 
 
